--- a/style.css
+++ b/style.css
@@ -5,33 +5,64 @@
     padding: 0;
 
 }
+
+.clearfix::after{
+    content: "";
+    display: table;
+    clear: both;
+}
+
 body {
     padding-top: 1rem;
     padding-left: 5rem;
     padding-right: 5rem;
 }
 
-    .debug > .contenuto {
+    .debug > .contenut {
         height: 300px;
     }
     
 
-
-
 .sitehearder {
     height: 100px;
-    background-color: rgb(225, 0, 233);
+    background-color:rgba(229, 121, 230, 1);
+    margin-bottom: 1rem;
    
 }
-
-.box1 {
-    height: 300px;
-    margin-top: 1rem;
-    background-color: rgb(193, 204, 143);
+.blocco{
+    height: 400px;
+    background-color: rgba(225, 214, 122, 1);
 }
-.macrobox {
-    height: 500px;
+.soprablocco{
     margin-top: 1rem;
-    background-color: rgba(75, 150, 211, 0.575);
-
+    height: 100px;
+    background-color: rgba(171, 207, 231, 1);
+}
+.macroblocco{
+    padding-top: 1rem;
+    height: 400px;
+    background-color: rgba(0, 134, 255, 1)
+}
+.blocco1{
+    float: right;
+    height: 370px;
+    width: 250px;
+    background-color: rgba(171, 207, 231, 1);
+}
+.blocco3{
+    float: left;
+    height: 370px;
+    width: 250px;
+    background-color: rgba(171, 207, 231, 1);
+}
+.blocco2{
+    height: 370px;
+    width: 500px;
+    margin-inline: auto;
+    background-color: rgba(171, 207, 231, 1);
+}
+.sottoblocco{
+    margin-top: 1rem;
+    height: 100px;
+    background-color:rgba(136, 1, 254, 1);
 }
